//protoのバージョンを設定
syntax = "proto3";

//自動生成するコードの置き場所
option go_package = "pkg/grpc";

//packageの準備
package myapp;

//サービス定義
service GreetingService {
	// サービスが持つメソッドの定義
	rpc Hello (HelloRequest) returns (HelloResponse);

	//serverストリーミングRPC
	rpc HelloServerStream(HelloRequest)returns(stream HelloResponse);

	//clientstreamingRPC
	rpc HelloClientStream(stream HelloRequest)returns(HelloResponse);

	//双方向streamingRPC
	rpc HelloBiStreams(stream HelloRequest)returns (stream HelloResponse);
}

// 型の定義
message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string message = 1;
}